# Scipher

./: pyproject.toml  start-dev.sh
Web/: package-lock.json  package.json  tailwind.config.js
Web/app/: globals.css  layout.tsx  page.tsx
Web/app/components/: DocumentUploader.tsx  DocumentViewer.tsx  ProcessingStatus.tsx
Web/app/lib/: api.ts
Web/components/ui/: items.tsx
Web/src/app/components/: DocumentViewer.tsx  ProcessingStatus.tsx
Web/styles/: globals.css
backend/: .gitignore  main.py  pyproject.toml  requirements.txt  scipher.db
backend/src/scipher/: .env  __init__.py  config.py  dependencies.py
backend/src/scipher/api/: middleware.py
backend/src/scipher/api/routes/: __init__.py  content.py  processing.py  upload.py
backend/src/scipher/core/: __init__.py  document_processor.py  exceptions.py  summarizer.py  validator.py
backend/src/scipher/models/: __init__.py  database.py  schemas.py
backend/src/scipher/utils/: __init__.py  file_utils.py  response_utils.py
frontend/: README.md  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: DocumentUploader.tsx  DocumentViewer.tsx  ErrorBoundary.tsx
frontend/src/app/lib/: api.ts
