[project]
name = "scipher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aryanshr", email = "Arynshr@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.9",
    "setuptools>=80.9.0",
    "streamlit>=1.49.1",
]

[project.scripts]
scipher = "scipher:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
