[project]
name = "scipher"
version = "0.1.0"
description = "Add your project description here"
readme = "README.md"
authors = [
    { name = "Aryan Sharma", email = "aryanshr@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.13.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "docling>=2.55.1",
    "fastapi>=0.118.0",
    "hatchling>=1.27.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]

# Treat all top-level folders as packages
packages = [
    { include = "api" },
    { include = "core" },
    { include = "models" },
    { include = "utils" }
]

[project.scripts]
scipher = "main:main"  # main() function in main.py

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
